--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,2 +1,20 @@
+branch-defaults:
+  master:
+    environment: django-env
+environment-defaults:
+  django-env:
+    branch: master
+    repository: codecommit-origin
 global:
+  application_name: django-tutorial
+  default_ec2_keyname: saikiran
+  default_platform: python-3.6
+  default_region: ap-south-1
+  include_git_submodules: true
+  instance_profile: null
+  no-verify-ssl: true
+  platform_name: null
+  platform_version: null
   profile: eb-cli
+  sc: git
+  workspace_type: Application
